# ros-image_cloud

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
cfg/: blur.cfg  brightness.cfg  clahe.cfg  continuous_calibration.cfg  dilate.cfg  edge_detector.cfg  erode.cfg  fusion.cfg  gamma.cfg  harris3d.cfg  manual_calibration.cfg  pcl_image.cfg  sync_image.cfg  sync_remap.cfg
include/image_cloud/: image_cloud_nodelet.h  image_enhancement.h
include/image_cloud/calibration/: continuous_calibration.h  image_cloud_nodelet.h  manual_calibration.h  pcl_to_image_nodelet.h
include/image_cloud/common/: depth_filter.hpp  pcl_features.hpp  pointcloud_rgb.hpp  project2d.hpp  score.hpp  small_helpers.hpp  string_list.h  time.hpp  transform.hpp  type.hpp
include/image_cloud/common/calibration/: grid_search.hpp  multi_score.hpp  score.hpp  structs.hpp  transform_publisher.hpp
include/image_cloud/common/calibration/pipeline/: enums.h  image.hpp  pointcloud.hpp  process.hpp
include/image_cloud/common/filter/: edge.hpp  inverse_distance_transform.hpp
include/image_cloud/common/filter/cv/: edge.hpp  inverse_distance_transform.hpp
include/image_cloud/common/filter/pcl/: common.hpp  depth_edge.hpp  depth_filter.hpp  depth_filter_neighbors.hpp  depth_filter_radius.hpp  edge_image_plane.hpp  filter_depth_discontinuity.hpp  filter_depth_intensity.hpp  filter_depth_projection.hpp  hit_image_plane.hpp  hit_same_point.hpp  normal_diff_filter.hpp  range_borders.hpp  remove_cluster_2d.hpp  segmentation.hpp
include/image_cloud/common/kitti/: camera.h  camera_list.h  dataset.h  tf.h
include/image_cloud/fusion/: fusion.h
include/image_cloud/gui/: config_parser.h  filelist.h  filter_value.h  gui_opencv.h  kitti_camera.h  simple_gui.h  string_list.h
include/image_cloud/gui/kitti/: camera.h  camera_list.h  dataset.h  serializable.h  tf.h
include/image_cloud/image_enhancement/: blur.h  brightness.h  clahe.h  dilate.h  erode.h  gamma.h  opencv_helper.hpp
include/image_cloud/image_features/: edge_detector_nodelet.h
include/image_cloud/pcl_features/: harris3d_nodelet.h
include/image_cloud/sync/: remap.h  sync_image.h
launch/: continuous_calibration_node.launch  continuous_calibration_nodelet.launch  example_nodelet.launch  fusion.launch  harris3d.launch  image_edge_projection.launch  image_pointcloud_nodelet.launch  manual_calibration.launch  pcl_to_image.launch  pcl_to_image_nodelet.launch  sync_image.launch  sync_remap.launch
src/calibration/: benchmark_standalone.cpp  calibration_standalone.cpp  continuous_calibration.cpp  continuous_calibration_node.cpp  continuous_calibration_nodelet.cpp  manual_calibration.cpp  pcl_to_image_nodelet.cpp  test.cpp  test.h
src/common/: string_list.cpp
src/common/kitti/: camera.cpp  camera_list.cpp  dataset.cpp  serializable.cpp  tf.cpp
src/export/: Image_export.cpp  Image_export.h  pointcloud_export.cpp  pointcloud_export.h
src/fusion/: fusion.cpp  image_cloud_nodelet.cpp
src/gui/: config_parser.cpp  filelist.cpp  filter_value.cpp  gui_opencv.cpp  kitti_camera.cpp  node.cpp  simple_gui.cpp  slider.cpp  string_list.cpp
src/gui/kitti/: camera.cpp  camera_list.cpp  dataset.cpp  serializable.cpp  tf.cpp
src/image_enhancement/: blur.cpp  brightness.cpp  clahe.cpp  dilate.cpp  erode.cpp  gamma.cpp  image_enhancement.cpp
src/image_features/: edge_detector_nodelet.cpp  edge_detector_nodelet.h
src/pcl_features/: depth_discontinuity.cpp  harris3d_nodelet.cpp
src/sync/: remap.cpp  sync_image.cpp
